--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,106 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.main_div{
+  width:100%;
+  height:100vh;
+  background-color: blueviolet;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.center_div{
+  width:25%;
+  height:80vh;
+  background-color: white;
+  box-shadow: 5px 5px 25px -5px #0f0d0d;
+  border-radius: 15px;
+}
+h1{
+  color: white;
+  background: transparent;
+  background-color: blueviolet;
+  padding: 6px 0 2px 0;
+  margin-bottom: 10px;
+  box-shadow: 5px 5px 25px -5px #0f0d0d;
+}
+
+input{
+  margin-left: 20px;
+  text-align: center;
+  height: 30px;
+  top: 10px;
+  border: none;
+  background: transparent;
+  font-size: 15px;
+  font-weight: 500;
+  width: 60%;
+  border-bottom: 2px solid black;
+  outline: none;
+}
+
+button{
+  min-height: 40px;
+  width: 40px;
+  border-radius: 50%;
+  border-color: transparent;
+  background-color: blueviolet;
+  color: white;
+  font-size: 40px;
+  border: none;
+  outline: none;
+  /* box-shadow: 5px 5px 25px -5px #0f0d0d; */
+}
+button:hover{
+  background-color: green;
+}
+
+ol{
+  margin-top: 30px;
+  list-style: none !important;
+}
+
+ol li{
+  /* padding-left: 0px; */
+  list-style: none !important;
+  text-align: left;
+  font-size: 20px;
+  font-weight: 500;
+  min-height: 40px;
+  display: flex;
+  align-items: center;
+  color: blueviolet;
+  text-transform: capitalize;
+}
+.itembox{
+  width: 400px;
+  display: flex;
+  
+}
+.deletebtn {
+  height: 45px;
+  background-image: url("./del.png");
+  background-size: cover;
+  /* background-image: fix; */
+  width: 45px;
+  border-radius: 50%;
+  /* float: left; */
+ 
+}
+
+
+.editbtn{
+  height: 45px;
+  background-image: url('./edit.png');
+  background-size: cover;
+  background-image: fix;
+  width: 45px;
+  border-radius: 50%;
+}
+
+li {
+  list-style: none !important;
+}
