--- a/src/index.css
+++ b/src/index.css
@@ -54,7 +54,7 @@ input{
 
 button{
   min-height: 40px;
-  width: 40px;
+  width: 55px;
   border-radius: 50%;
   border-color: transparent;
   background-color: blueviolet;
@@ -82,7 +82,7 @@ ol li{
   min-height: 40px;
   display: flex;
   align-items: center;
-  color: blueviolet;
+  color: rgb(8, 7, 8);
   text-transform: capitalize;
 }
 .itembox{
@@ -91,11 +91,12 @@ ol li{
   
 }
 .deletebtn {
-  height: 45px;
-  background-image: url("./del.png");
+  height: 40px;
+  background-image: url("./del1.png");
   background-size: cover;
+  background-color: white;
   /* background-image: fix; */
-  width: 45px;
+  width: 40px;
   border-radius: 50%;
   /* float: left; */
  
@@ -113,4 +114,8 @@ ol li{
 
 li {
   list-style: none !important;
+}
+
+.editInput{
+  font-size: larger;
 }
